MILESTONE: GENERATION WORKING WELL

--- a/initializer/draft.ipynb
+++ b/initializer/draft.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'initializer'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01minitializer\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01minputs\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m *\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdatetime\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m datetime, timedelta\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrandom\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'initializer'"
+     ]
+    }
+   ],
    "source": [
     "from initializer.inputs import *\n",
     "from datetime import datetime, timedelta\n",
@@ -15,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,9 +187,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'lines_info' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m cp_locations_summary = summarize_cp_locations(\u001b[43mlines_info\u001b[49m)\n\u001b[32m      2\u001b[39m cp_distances = calculate_cp_distances(cp_locations_summary, lines_info)\n\u001b[32m      3\u001b[39m transformed_cp_depot_distances = transform_cp_depot_distances(cp_depot_distances)\n",
+      "\u001b[31mNameError\u001b[39m: name 'lines_info' is not defined"
+     ]
+    }
+   ],
    "source": [
     "cp_locations_summary = summarize_cp_locations(lines_info)\n",
     "cp_distances = calculate_cp_distances(cp_locations_summary, lines_info)\n",
@@ -189,233 +213,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cp1_l4</th>\n",
-       "      <th>cp1_l59</th>\n",
-       "      <th>cp1_l60</th>\n",
-       "      <th>cp2_l4</th>\n",
-       "      <th>cp2_l59</th>\n",
-       "      <th>cp2_l60</th>\n",
-       "      <th>d1_4</th>\n",
-       "      <th>d1_59</th>\n",
-       "      <th>d2_4</th>\n",
-       "      <th>d2_59</th>\n",
-       "      <th>d2_60</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>cp1_l4</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>9.422740</td>\n",
-       "      <td>9.422740</td>\n",
-       "      <td>24.000000</td>\n",
-       "      <td>3.549382</td>\n",
-       "      <td>9.501166</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>4.08</td>\n",
-       "      <td>28.80</td>\n",
-       "      <td>14.76</td>\n",
-       "      <td>3.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>cp1_l59</th>\n",
-       "      <td>9.422740</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>14.778975</td>\n",
-       "      <td>11.400000</td>\n",
-       "      <td>17.722110</td>\n",
-       "      <td>4.08</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>15.84</td>\n",
-       "      <td>13.68</td>\n",
-       "      <td>6.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>cp1_l60</th>\n",
-       "      <td>9.422740</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>14.778975</td>\n",
-       "      <td>11.086324</td>\n",
-       "      <td>19.000000</td>\n",
-       "      <td>14.76</td>\n",
-       "      <td>13.68</td>\n",
-       "      <td>5.64</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>22.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>cp2_l4</th>\n",
-       "      <td>24.000000</td>\n",
-       "      <td>14.778975</td>\n",
-       "      <td>14.778975</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>4.077578</td>\n",
-       "      <td>3.237288</td>\n",
-       "      <td>28.80</td>\n",
-       "      <td>16.32</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>5.64</td>\n",
-       "      <td>23.04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>cp2_l59</th>\n",
-       "      <td>3.549382</td>\n",
-       "      <td>11.400000</td>\n",
-       "      <td>11.086324</td>\n",
-       "      <td>4.077578</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>6.675498</td>\n",
-       "      <td>14.76</td>\n",
-       "      <td>13.68</td>\n",
-       "      <td>5.64</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>22.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>cp2_l60</th>\n",
-       "      <td>9.501166</td>\n",
-       "      <td>17.722110</td>\n",
-       "      <td>19.000000</td>\n",
-       "      <td>3.237288</td>\n",
-       "      <td>6.675498</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>3.24</td>\n",
-       "      <td>6.60</td>\n",
-       "      <td>23.04</td>\n",
-       "      <td>22.80</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>d1_4</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>4.080000</td>\n",
-       "      <td>14.760000</td>\n",
-       "      <td>28.800000</td>\n",
-       "      <td>14.760000</td>\n",
-       "      <td>3.240000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>d1_59</th>\n",
-       "      <td>4.080000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>13.680000</td>\n",
-       "      <td>16.320000</td>\n",
-       "      <td>13.680000</td>\n",
-       "      <td>6.600000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>d2_4</th>\n",
-       "      <td>28.800000</td>\n",
-       "      <td>15.840000</td>\n",
-       "      <td>5.640000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>5.640000</td>\n",
-       "      <td>23.040000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>d2_59</th>\n",
-       "      <td>14.760000</td>\n",
-       "      <td>13.680000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>5.640000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>22.800000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>d2_60</th>\n",
-       "      <td>3.240000</td>\n",
-       "      <td>6.600000</td>\n",
-       "      <td>22.800000</td>\n",
-       "      <td>23.040000</td>\n",
-       "      <td>22.800000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            cp1_l4    cp1_l59    cp1_l60     cp2_l4    cp2_l59    cp2_l60  \\\n",
-       "cp1_l4    0.000000   9.422740   9.422740  24.000000   3.549382   9.501166   \n",
-       "cp1_l59   9.422740   0.000000   0.000000  14.778975  11.400000  17.722110   \n",
-       "cp1_l60   9.422740   0.000000   0.000000  14.778975  11.086324  19.000000   \n",
-       "cp2_l4   24.000000  14.778975  14.778975   0.000000   4.077578   3.237288   \n",
-       "cp2_l59   3.549382  11.400000  11.086324   4.077578   0.000000   6.675498   \n",
-       "cp2_l60   9.501166  17.722110  19.000000   3.237288   6.675498   0.000000   \n",
-       "d1_4      0.000000   4.080000  14.760000  28.800000  14.760000   3.240000   \n",
-       "d1_59     4.080000   0.000000  13.680000  16.320000  13.680000   6.600000   \n",
-       "d2_4     28.800000  15.840000   5.640000   0.000000   5.640000  23.040000   \n",
-       "d2_59    14.760000  13.680000   0.000000   5.640000   0.000000  22.800000   \n",
-       "d2_60     3.240000   6.600000  22.800000  23.040000  22.800000   0.000000   \n",
-       "\n",
-       "          d1_4  d1_59   d2_4  d2_59  d2_60  \n",
-       "cp1_l4    0.00   4.08  28.80  14.76   3.24  \n",
-       "cp1_l59   4.08   0.00  15.84  13.68   6.60  \n",
-       "cp1_l60  14.76  13.68   5.64   0.00  22.80  \n",
-       "cp2_l4   28.80  16.32   0.00   5.64  23.04  \n",
-       "cp2_l59  14.76  13.68   5.64   0.00  22.80  \n",
-       "cp2_l60   3.24   6.60  23.04  22.80   0.00  \n",
-       "d1_4       NaN    NaN    NaN    NaN    NaN  \n",
-       "d1_59      NaN    NaN    NaN    NaN    NaN  \n",
-       "d2_4       NaN    NaN    NaN    NaN    NaN  \n",
-       "d2_59      NaN    NaN    NaN    NaN    NaN  \n",
-       "d2_60      NaN    NaN    NaN    NaN    NaN  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'dh_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdh_df\u001b[49m\n",
+      "\u001b[31mNameError\u001b[39m: name 'dh_df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -676,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +719,7 @@
     }
    ],
    "source": [
-    "timetables.head(12)"
+    "timetables.tail(12)"
    ]
   },
   {
