MILESTONE: INITIALIZER VALIDATED!

--- a/initializer/draft.ipynb
+++ b/initializer/draft.ipynb
@@ -4,21 +4,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'initializer'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01minitializer\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01minputs\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m *\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdatetime\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m datetime, timedelta\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrandom\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'initializer'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from initializer.inputs import *\n",
+    "from inputs import *\n",
     "from datetime import datetime, timedelta\n",
     "import random\n",
     "import pandas as pd\n",
@@ -189,19 +177,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'lines_info' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m cp_locations_summary = summarize_cp_locations(\u001b[43mlines_info\u001b[49m)\n\u001b[32m      2\u001b[39m cp_distances = calculate_cp_distances(cp_locations_summary, lines_info)\n\u001b[32m      3\u001b[39m transformed_cp_depot_distances = transform_cp_depot_distances(cp_depot_distances)\n",
-      "\u001b[31mNameError\u001b[39m: name 'lines_info' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cp_locations_summary = summarize_cp_locations(lines_info)\n",
     "cp_distances = calculate_cp_distances(cp_locations_summary, lines_info)\n",
@@ -217,15 +193,229 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'dh_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdh_df\u001b[49m\n",
-      "\u001b[31mNameError\u001b[39m: name 'dh_df' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cp1_l4</th>\n",
+       "      <th>cp1_l59</th>\n",
+       "      <th>cp1_l60</th>\n",
+       "      <th>cp2_l4</th>\n",
+       "      <th>cp2_l59</th>\n",
+       "      <th>cp2_l60</th>\n",
+       "      <th>d1_4</th>\n",
+       "      <th>d1_59</th>\n",
+       "      <th>d2_4</th>\n",
+       "      <th>d2_59</th>\n",
+       "      <th>d2_60</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>cp1_l4</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>9.422740</td>\n",
+       "      <td>9.422740</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>3.549382</td>\n",
+       "      <td>9.501166</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.08</td>\n",
+       "      <td>28.80</td>\n",
+       "      <td>14.76</td>\n",
+       "      <td>3.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cp1_l59</th>\n",
+       "      <td>9.422740</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>14.778975</td>\n",
+       "      <td>11.400000</td>\n",
+       "      <td>17.722110</td>\n",
+       "      <td>4.08</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>15.84</td>\n",
+       "      <td>13.68</td>\n",
+       "      <td>6.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cp1_l60</th>\n",
+       "      <td>9.422740</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>14.778975</td>\n",
+       "      <td>11.086324</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>4.08</td>\n",
+       "      <td>13.68</td>\n",
+       "      <td>15.84</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>6.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cp2_l4</th>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>14.778975</td>\n",
+       "      <td>14.778975</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.077578</td>\n",
+       "      <td>3.237288</td>\n",
+       "      <td>28.80</td>\n",
+       "      <td>16.32</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>5.64</td>\n",
+       "      <td>23.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cp2_l59</th>\n",
+       "      <td>3.549382</td>\n",
+       "      <td>11.400000</td>\n",
+       "      <td>11.086324</td>\n",
+       "      <td>4.077578</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.675498</td>\n",
+       "      <td>14.76</td>\n",
+       "      <td>13.68</td>\n",
+       "      <td>5.64</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>22.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cp2_l60</th>\n",
+       "      <td>9.501166</td>\n",
+       "      <td>17.722110</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>3.237288</td>\n",
+       "      <td>6.675498</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.24</td>\n",
+       "      <td>6.60</td>\n",
+       "      <td>23.04</td>\n",
+       "      <td>22.80</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d1_4</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.080000</td>\n",
+       "      <td>4.080000</td>\n",
+       "      <td>28.800000</td>\n",
+       "      <td>14.760000</td>\n",
+       "      <td>3.240000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d1_59</th>\n",
+       "      <td>4.080000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>13.680000</td>\n",
+       "      <td>16.320000</td>\n",
+       "      <td>13.680000</td>\n",
+       "      <td>6.600000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d2_4</th>\n",
+       "      <td>28.800000</td>\n",
+       "      <td>15.840000</td>\n",
+       "      <td>15.840000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.640000</td>\n",
+       "      <td>23.040000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d2_59</th>\n",
+       "      <td>14.760000</td>\n",
+       "      <td>13.680000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.640000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>22.800000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d2_60</th>\n",
+       "      <td>3.240000</td>\n",
+       "      <td>6.600000</td>\n",
+       "      <td>6.600000</td>\n",
+       "      <td>23.040000</td>\n",
+       "      <td>22.800000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            cp1_l4    cp1_l59    cp1_l60     cp2_l4    cp2_l59    cp2_l60  \\\n",
+       "cp1_l4    0.000000   9.422740   9.422740  24.000000   3.549382   9.501166   \n",
+       "cp1_l59   9.422740   0.000000   0.000000  14.778975  11.400000  17.722110   \n",
+       "cp1_l60   9.422740   0.000000   0.000000  14.778975  11.086324  19.000000   \n",
+       "cp2_l4   24.000000  14.778975  14.778975   0.000000   4.077578   3.237288   \n",
+       "cp2_l59   3.549382  11.400000  11.086324   4.077578   0.000000   6.675498   \n",
+       "cp2_l60   9.501166  17.722110  19.000000   3.237288   6.675498   0.000000   \n",
+       "d1_4      0.000000   4.080000   4.080000  28.800000  14.760000   3.240000   \n",
+       "d1_59     4.080000   0.000000  13.680000  16.320000  13.680000   6.600000   \n",
+       "d2_4     28.800000  15.840000  15.840000   0.000000   5.640000  23.040000   \n",
+       "d2_59    14.760000  13.680000   0.000000   5.640000   0.000000  22.800000   \n",
+       "d2_60     3.240000   6.600000   6.600000  23.040000  22.800000   0.000000   \n",
+       "\n",
+       "          d1_4  d1_59   d2_4  d2_59  d2_60  \n",
+       "cp1_l4    0.00   4.08  28.80  14.76   3.24  \n",
+       "cp1_l59   4.08   0.00  15.84  13.68   6.60  \n",
+       "cp1_l60   4.08  13.68  15.84   0.00   6.60  \n",
+       "cp2_l4   28.80  16.32   0.00   5.64  23.04  \n",
+       "cp2_l59  14.76  13.68   5.64   0.00  22.80  \n",
+       "cp2_l60   3.24   6.60  23.04  22.80   0.00  \n",
+       "d1_4       NaN    NaN    NaN    NaN    NaN  \n",
+       "d1_59      NaN    NaN    NaN    NaN    NaN  \n",
+       "d2_4       NaN    NaN    NaN    NaN    NaN  \n",
+       "d2_59      NaN    NaN    NaN    NaN    NaN  \n",
+       "d2_60      NaN    NaN    NaN    NaN    NaN  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -234,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +467,7 @@
        "      <td>0.000000</td>\n",
        "      <td>28.268221</td>\n",
        "      <td>28.268221</td>\n",
-       "      <td>22.369207</td>\n",
+       "      <td>72.000000</td>\n",
        "      <td>10.648146</td>\n",
        "      <td>28.503498</td>\n",
        "      <td>0.00</td>\n",
@@ -292,7 +482,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>44.336924</td>\n",
-       "      <td>33.258972</td>\n",
+       "      <td>34.200000</td>\n",
        "      <td>53.166331</td>\n",
        "      <td>12.24</td>\n",
        "      <td>0.00</td>\n",
@@ -307,16 +497,16 @@
        "      <td>0.000000</td>\n",
        "      <td>44.336924</td>\n",
        "      <td>33.258972</td>\n",
-       "      <td>53.166331</td>\n",
-       "      <td>44.28</td>\n",
+       "      <td>57.000000</td>\n",
+       "      <td>12.24</td>\n",
        "      <td>41.04</td>\n",
-       "      <td>16.92</td>\n",
+       "      <td>47.52</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>68.40</td>\n",
+       "      <td>19.80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>cp2_l4</th>\n",
-       "      <td>22.369207</td>\n",
+       "      <td>72.000000</td>\n",
        "      <td>44.336924</td>\n",
        "      <td>44.336924</td>\n",
        "      <td>0.000000</td>\n",
@@ -331,7 +521,7 @@
        "    <tr>\n",
        "      <th>cp2_l59</th>\n",
        "      <td>10.648146</td>\n",
-       "      <td>33.258972</td>\n",
+       "      <td>34.200000</td>\n",
        "      <td>33.258972</td>\n",
        "      <td>12.232734</td>\n",
        "      <td>0.000000</td>\n",
@@ -346,7 +536,7 @@
        "      <th>cp2_l60</th>\n",
        "      <td>28.503498</td>\n",
        "      <td>53.166331</td>\n",
-       "      <td>53.166331</td>\n",
+       "      <td>57.000000</td>\n",
        "      <td>9.711863</td>\n",
        "      <td>20.026495</td>\n",
        "      <td>0.000000</td>\n",
@@ -360,7 +550,7 @@
        "      <th>d1_4</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>12.240000</td>\n",
-       "      <td>44.280000</td>\n",
+       "      <td>12.240000</td>\n",
        "      <td>86.400000</td>\n",
        "      <td>44.280000</td>\n",
        "      <td>9.720000</td>\n",
@@ -388,7 +578,7 @@
        "      <th>d2_4</th>\n",
        "      <td>86.400000</td>\n",
        "      <td>47.520000</td>\n",
-       "      <td>16.920000</td>\n",
+       "      <td>47.520000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>16.920000</td>\n",
        "      <td>69.120000</td>\n",
@@ -416,7 +606,7 @@
        "      <th>d2_60</th>\n",
        "      <td>9.720000</td>\n",
        "      <td>19.800000</td>\n",
-       "      <td>68.400000</td>\n",
+       "      <td>19.800000</td>\n",
        "      <td>69.120000</td>\n",
        "      <td>68.400000</td>\n",
        "      <td>0.000000</td>\n",
@@ -432,22 +622,22 @@
       ],
       "text/plain": [
        "            cp1_l4    cp1_l59    cp1_l60     cp2_l4    cp2_l59    cp2_l60  \\\n",
-       "cp1_l4    0.000000  28.268221  28.268221  22.369207  10.648146  28.503498   \n",
-       "cp1_l59  28.268221   0.000000   0.000000  44.336924  33.258972  53.166331   \n",
-       "cp1_l60  28.268221   0.000000   0.000000  44.336924  33.258972  53.166331   \n",
-       "cp2_l4   22.369207  44.336924  44.336924   0.000000  12.232734   9.711863   \n",
-       "cp2_l59  10.648146  33.258972  33.258972  12.232734   0.000000  20.026495   \n",
-       "cp2_l60  28.503498  53.166331  53.166331   9.711863  20.026495   0.000000   \n",
-       "d1_4      0.000000  12.240000  44.280000  86.400000  44.280000   9.720000   \n",
+       "cp1_l4    0.000000  28.268221  28.268221  72.000000  10.648146  28.503498   \n",
+       "cp1_l59  28.268221   0.000000   0.000000  44.336924  34.200000  53.166331   \n",
+       "cp1_l60  28.268221   0.000000   0.000000  44.336924  33.258972  57.000000   \n",
+       "cp2_l4   72.000000  44.336924  44.336924   0.000000  12.232734   9.711863   \n",
+       "cp2_l59  10.648146  34.200000  33.258972  12.232734   0.000000  20.026495   \n",
+       "cp2_l60  28.503498  53.166331  57.000000   9.711863  20.026495   0.000000   \n",
+       "d1_4      0.000000  12.240000  12.240000  86.400000  44.280000   9.720000   \n",
        "d1_59    12.240000   0.000000  41.040000  48.960000  41.040000  19.800000   \n",
-       "d2_4     86.400000  47.520000  16.920000   0.000000  16.920000  69.120000   \n",
+       "d2_4     86.400000  47.520000  47.520000   0.000000  16.920000  69.120000   \n",
        "d2_59    44.280000  41.040000   0.000000  16.920000   0.000000  68.400000   \n",
-       "d2_60     9.720000  19.800000  68.400000  69.120000  68.400000   0.000000   \n",
+       "d2_60     9.720000  19.800000  19.800000  69.120000  68.400000   0.000000   \n",
        "\n",
        "          d1_4  d1_59   d2_4  d2_59  d2_60  \n",
        "cp1_l4    0.00  12.24  86.40  44.28   9.72  \n",
        "cp1_l59  12.24   0.00  47.52  41.04  19.80  \n",
-       "cp1_l60  44.28  41.04  16.92   0.00  68.40  \n",
+       "cp1_l60  12.24  41.04  47.52   0.00  19.80  \n",
        "cp2_l4   86.40  48.96   0.00  16.92  69.12  \n",
        "cp2_l59  44.28  41.04  16.92   0.00  68.40  \n",
        "cp2_l60   9.72  19.80  69.12  68.40   0.00  \n",
@@ -458,7 +648,7 @@
        "d2_60      NaN    NaN    NaN    NaN    NaN  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
