--- a/initializer/draft.ipynb
+++ b/initializer/draft.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -264,9 +264,9 @@
        "      <td>11.086324</td>\n",
        "      <td>19.000000</td>\n",
        "      <td>4.08</td>\n",
-       "      <td>13.68</td>\n",
-       "      <td>15.84</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>15.84</td>\n",
+       "      <td>13.68</td>\n",
        "      <td>6.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -329,7 +329,7 @@
        "      <th>d1_59</th>\n",
        "      <td>4.080000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>13.680000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>16.320000</td>\n",
        "      <td>13.680000</td>\n",
        "      <td>6.600000</td>\n",
@@ -357,7 +357,7 @@
        "      <th>d2_59</th>\n",
        "      <td>14.760000</td>\n",
        "      <td>13.680000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>13.680000</td>\n",
        "      <td>5.640000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>22.800000</td>\n",
@@ -394,15 +394,15 @@
        "cp2_l59   3.549382  11.400000  11.086324   4.077578   0.000000   6.675498   \n",
        "cp2_l60   9.501166  17.722110  19.000000   3.237288   6.675498   0.000000   \n",
        "d1_4      0.000000   4.080000   4.080000  28.800000  14.760000   3.240000   \n",
-       "d1_59     4.080000   0.000000  13.680000  16.320000  13.680000   6.600000   \n",
+       "d1_59     4.080000   0.000000   0.000000  16.320000  13.680000   6.600000   \n",
        "d2_4     28.800000  15.840000  15.840000   0.000000   5.640000  23.040000   \n",
-       "d2_59    14.760000  13.680000   0.000000   5.640000   0.000000  22.800000   \n",
+       "d2_59    14.760000  13.680000  13.680000   5.640000   0.000000  22.800000   \n",
        "d2_60     3.240000   6.600000   6.600000  23.040000  22.800000   0.000000   \n",
        "\n",
        "          d1_4  d1_59   d2_4  d2_59  d2_60  \n",
        "cp1_l4    0.00   4.08  28.80  14.76   3.24  \n",
        "cp1_l59   4.08   0.00  15.84  13.68   6.60  \n",
-       "cp1_l60   4.08  13.68  15.84   0.00   6.60  \n",
+       "cp1_l60   4.08   0.00  15.84  13.68   6.60  \n",
        "cp2_l4   28.80  16.32   0.00   5.64  23.04  \n",
        "cp2_l59  14.76  13.68   5.64   0.00  22.80  \n",
        "cp2_l60   3.24   6.60  23.04  22.80   0.00  \n",
@@ -413,7 +413,7 @@
        "d2_60      NaN    NaN    NaN    NaN    NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -499,9 +499,9 @@
        "      <td>33.258972</td>\n",
        "      <td>57.000000</td>\n",
        "      <td>12.24</td>\n",
-       "      <td>41.04</td>\n",
-       "      <td>47.52</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>47.52</td>\n",
+       "      <td>41.04</td>\n",
        "      <td>19.80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -564,7 +564,7 @@
        "      <th>d1_59</th>\n",
        "      <td>12.240000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>41.040000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>48.960000</td>\n",
        "      <td>41.040000</td>\n",
        "      <td>19.800000</td>\n",
@@ -592,7 +592,7 @@
        "      <th>d2_59</th>\n",
        "      <td>44.280000</td>\n",
        "      <td>41.040000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>41.040000</td>\n",
        "      <td>16.920000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>68.400000</td>\n",
@@ -629,15 +629,15 @@
        "cp2_l59  10.648146  34.200000  33.258972  12.232734   0.000000  20.026495   \n",
        "cp2_l60  28.503498  53.166331  57.000000   9.711863  20.026495   0.000000   \n",
        "d1_4      0.000000  12.240000  12.240000  86.400000  44.280000   9.720000   \n",
-       "d1_59    12.240000   0.000000  41.040000  48.960000  41.040000  19.800000   \n",
+       "d1_59    12.240000   0.000000   0.000000  48.960000  41.040000  19.800000   \n",
        "d2_4     86.400000  47.520000  47.520000   0.000000  16.920000  69.120000   \n",
-       "d2_59    44.280000  41.040000   0.000000  16.920000   0.000000  68.400000   \n",
+       "d2_59    44.280000  41.040000  41.040000  16.920000   0.000000  68.400000   \n",
        "d2_60     9.720000  19.800000  19.800000  69.120000  68.400000   0.000000   \n",
        "\n",
        "          d1_4  d1_59   d2_4  d2_59  d2_60  \n",
        "cp1_l4    0.00  12.24  86.40  44.28   9.72  \n",
        "cp1_l59  12.24   0.00  47.52  41.04  19.80  \n",
-       "cp1_l60  12.24  41.04  47.52   0.00  19.80  \n",
+       "cp1_l60  12.24   0.00  47.52  41.04  19.80  \n",
        "cp2_l4   86.40  48.96   0.00  16.92  69.12  \n",
        "cp2_l59  44.28  41.04  16.92   0.00  68.40  \n",
        "cp2_l60   9.72  19.80  69.12  68.40   0.00  \n",
@@ -648,13 +648,33 @@
        "d2_60      NaN    NaN    NaN    NaN    NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dh_times_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.268220860607236"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float(dh_times_df.loc[\"cp1_l4\", \"cp1_l59\"])"
    ]
   },
   {
