--- a/initializer/draft.ipynb
+++ b/initializer/draft.ipynb
@@ -1287,6 +1287,132 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A → B  :  reduced_cost=1.2, dist=10, time=5\n",
+      "A → C  :  reduced_cost=2.5, dist=15, time=7\n",
+      "B → C  :  reduced_cost=1.0, dist=8, time=4\n",
+      "B → D  :  reduced_cost=3.1, dist=12, time=6\n",
+      "C → D  :  reduced_cost=0.9, dist=5, time=3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import networkx as nx\n",
+    "from collections import deque\n",
+    "\n",
+    "# 1. Example graph with three attributes per edge\n",
+    "sample_graph = {\n",
+    "    'A': {\n",
+    "        'B': {'reduced_cost': 1.2, 'dist': 10, 'time': 5},\n",
+    "        'C': {'reduced_cost': 2.5, 'dist': 15, 'time': 7},\n",
+    "    },\n",
+    "    'B': {\n",
+    "        'C': {'reduced_cost': 1.0, 'dist': 8, 'time': 4},\n",
+    "        'D': {'reduced_cost': 3.1, 'dist': 12, 'time': 6},\n",
+    "    },\n",
+    "    'C': {\n",
+    "        'D': {'reduced_cost': 0.9, 'dist': 5, 'time': 3},\n",
+    "    },\n",
+    "    'D': {}   # no outgoing edges\n",
+    "}\n",
+    "\n",
+    "# 2. Conversion function\n",
+    "def dict_to_nx_multi(graph_dict, directed=True):\n",
+    "    G = nx.DiGraph() if directed else nx.Graph()\n",
+    "    for u, nbrs in graph_dict.items():\n",
+    "        for v, attrs in nbrs.items():\n",
+    "            # **unpack** all three attributes onto the edge\n",
+    "            G.add_edge(u, v,\n",
+    "                       reduced_cost=attrs['reduced_cost'],\n",
+    "                       dist=attrs['dist'],\n",
+    "                       time=attrs['time'])\n",
+    "    return G\n",
+    "\n",
+    "# build the NetworkX graph\n",
+    "G = dict_to_nx_multi(sample_graph)\n",
+    "\n",
+    "# 3. Inspect\n",
+    "for u, v, data in G.edges(data=True):\n",
+    "    print(f\"{u} → {v}  :  reduced_cost={data['reduced_cost']}, dist={data['dist']}, time={data['time']}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2\n",
+      "2.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for nbr in G.neighbors(\"A\"):\n",
+    "    print(G[\"A\"][nbr]['reduced_cost'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'graph' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m     13\u001b[39m         \u001b[38;5;28mprint\u001b[39m(distances)\n\u001b[32m     14\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m distances\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m trip_nodes = [n \u001b[38;5;28;01mfor\u001b[39;00m n, attr \u001b[38;5;129;01min\u001b[39;00m \u001b[43mgraph\u001b[49m.nodes(data=\u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;28;01mif\u001b[39;00m attr.get(\u001b[33m\"\u001b[39m\u001b[33mtype\u001b[39m\u001b[33m\"\u001b[39m) == \u001b[33m\"\u001b[39m\u001b[33mT\u001b[39m\u001b[33m\"\u001b[39m]\n",
+      "\u001b[31mNameError\u001b[39m: name 'graph' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def run_spfa(graph, source_node):\n",
+    "    red_costs = {source_node: 0}\n",
+    "    red_costs.update({k: math.inf for k in graph.keys() if k != source_node})\n",
+    "    dist = {source_node: 0}\n",
+    "    dist.update({k: math.inf for k in graph.keys() if k != source_node})\n",
+    "    time = {source_node: 0}\n",
+    "    time.update({k: math.inf for k in graph.keys() if k != source_node})\n",
+    "    queue = deque()\n",
+    "    queue.append(source_node)\n",
+    "    while len(queue) > 0:\n",
+    "        u = queue.popleft()\n",
+    "        current_time = graph[u][\"start_time\"]\n",
+    "        start_time = graph[u][\"start_time\"]\n",
+    "        planned_travel_time = graph[u][\"planned_travel_time\"]\n",
+    "        end_time = graph[u][\"end_time\"]\n",
+    "        start_cp = graph[u]['start_cp_id']\n",
+    "        end_cp = graph[u]['dest_cp_id']\n",
+    "\n",
+    "        for nbr in graph.neighbors(u):\n",
+    "            arc_reduced_cost = graph[u][nbr][\"reduced_cost\"]\n",
+    "            arc_time = graph[u][nbr][\"time\"]\n",
+    "            arc_dist = graph[u][nbr][\"dist\"]\n",
+    "            if red_costs[u] + arc_reduced_cost < red_costs[v]:\n",
+    "                red_costs[v] = red_costs[u] + dv\n",
+    "                if v not in queue:\n",
+    "                    queue.append(v)\n",
+    "        print(red_costs)\n",
+    "    return red_costs\n",
+    "\n",
+    "trip_nodes = [n for n, attr in graph.nodes(data=True) if attr.get(\"type\") == \"T\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
